# SimpleLang

./: CMakeLists.txt  README.md  main.cpp  test.txt
compiler/: CMakeLists.txt  grammar.txt  test.txt
compiler/inc/: ast.hpp  astnode.hpp  compiler.hpp  lexer.hpp  ll1parser.hpp  num.hpp  operation.hpp  parser.hpp  relop.hpp  symbols.hpp  token.hpp  word.hpp
compiler/lexer/: CMakeLists.txt  test.txt
compiler/lexer/inc/: brace.hpp  lexer.hpp  num.hpp  operation.hpp  token.hpp  word.hpp
compiler/lexer/src/: lexer.cpp  main.cpp  num.cpp  operation.cpp  token.cpp
compiler/src/: ast.cpp  astnode.cpp  compiler.cpp  lexer.cpp  ll1parser.cpp  main.cpp  num.cpp  operation.cpp  relop.cpp  symbols.cpp  token.cpp  word.cpp
compiler/src/lexer/: lexer.cpp  main.cpp
doc/: grammar.txt
svm/: CMakeLists.txt  sml.cpp  sml.hpp  svm
svm/inc/: svm.hpp
svm/src/: main.cpp  svm.cpp
